[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/images/NarKabhiralevel.png" type="Texture" id=1]
[ext_resource path="res://scripts/Narkabhira.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.6672, 20.2431 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.178, 19.7504 )

[node name="Narkabhira" type="KinematicBody2D"]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 2 )
health = 750

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -49.2924, -77.8564 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -46.0866, -78.93 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -137.094, -258.313 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 96.6872, 18.0387 )
shape = SubResource( 3 )

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="cooldown2" type="Timer" parent="."]
one_shot = true

[node name="FiringPosition" type="Node2D" parent="."]

[node name="gun5" type="Node2D" parent="FiringPosition"]
position = Vector2( -43.3322, -243.513 )

[node name="gun2" type="Node2D" parent="FiringPosition"]
position = Vector2( 83.8875, 79.1679 )

[node name="fire2" type="Node2D" parent="."]

[node name="gun" type="Node2D" parent="fire2"]
position = Vector2( -173.449, 70.1356 )

[node name="gun3" type="Node2D" parent="fire2"]
position = Vector2( 19.6678, -212.013 )

[node name="gun4" type="Node2D" parent="fire2"]
position = Vector2( -133.111, -219.735 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
